# edgeai-tiovx-apps

./: CMakeLists.txt  build.sh
ae_params/: ae_params.cpp  ae_params.h  ae_params_test.c
ae_params/test_yaml/: bad_periodic_fixed_exposure_gain_switch_missing_configs.yaml  bad_periodic_fixed_exposure_gain_switch_missing_num_configs.yaml  good_multi_range.yaml  good_periodic_fixed_exposure_gain_switch.yaml  good_single_range.yaml  illegal_yaml.yaml  missing_range_attr.yaml  missing_root_attr1.yaml  missing_root_attr2.yaml  wrong_key_type.yaml
aewb_debug_mode/: periodic_fixed_exposure_gain_switch.c  periodic_fixed_exposure_gain_switch.h
aewb_logger/: CMakeLists.txt  aewb_debug_utils.c  aewb_debug_utils.h  aewb_logger_receiver.c  aewb_logger_receiver.h  aewb_logger_receiver_types.h  aewb_logger_sender.c  aewb_logger_sender.h  aewb_logger_sender_types.h  aewb_logger_test.c  aewb_logger_types.h
apps/include/: info.h
apps/src/: app.c  main.c
cmake/: common.cmake
modules/: CMakeLists.txt
modules/core/include/: tiovx_modules_cbs.h  tiovx_modules_types.h
modules/include/: linux_aewb_handle_type.h  linux_aewb_module.h
modules/src/: linux_aewb_module.c  tiovx_sensor_module.c  tiovx_tidl_module.c  tiovx_viss_module.c
tests/: CMakeLists.txt  app_aewb_logger_test.c  app_tiovx_linux_capture_dof_test.c  app_tiovx_linux_capture_encode_test.c  app_tiovx_v4l2_capture_module_test.c  app_tiovx_viss_module_test.c  main.c
